--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -35,12 +35,12 @@ hr.star-dark:after {
 }
 
 hr.star-light {
-  border-color: #fff;
+  border-color: #FFFAFA;
 }
 
 hr.star-light:after {
-  color: #fff;
-  background-color: #18BC9C;
+  color: #FFFAFA;
+  background-color: #6495ED;
 }
 
 hr.star-dark {
@@ -115,7 +115,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #18BC9C;
+  color: #6495ED;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
@@ -123,7 +123,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #18BC9C;
+  color: #6495ED;
 }
 
 #mainNav .navbar-toggler {
@@ -150,11 +150,11 @@ section h2 {
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     color: #fff;
-    background: #18BC9C;
+    background: #6495ED;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
     color: #fff;
-    background: #18BC9C;
+    background: #6495ED;
   }
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
@@ -313,7 +313,7 @@ header.masthead h2 {
 }
 
 .floating-label-form-group-with-focus label {
-  color: #18BC9C;
+  color: #6495ED;
 }
 
 form .row:first-child .floating-label-form-group {
@@ -332,7 +332,7 @@ form .row:first-child .floating-label-form-group {
 }
 
 a {
-  color: #18BC9C;
+  color: #6495ED;
 }
 
 a:focus, a:hover, a:active {
@@ -344,15 +344,19 @@ a:focus, a:hover, a:active {
 }
 
 .bg-primary {
-  background-color: #18BC9C !important;
+  background-color: #6495ED !important;
 }
 
 .bg-secondary {
   background-color: #2C3E50 !important;
 }
 
+.text-main {
+  color: #FFFAFA !important;
+}
+
 .text-primary {
-  color: #18BC9C !important;
+  color: #6495ED !important;
 }
 
 .text-secondary {
@@ -360,8 +364,8 @@ a:focus, a:hover, a:active {
 }
 
 .btn-primary {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #6495ED;
+  border-color: #6495ED;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
